--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
+    "@angular/google-maps": "^9.0.0-rc.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/googlemaps": "^3.38.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
