--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "^5.2.11",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^5.2.0",
